docs:updated wrong spelling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     hi!! I am Shivali waghmare
-    I am studing new skill to make myself a efficient preson
+    I am studing new skill to make myself a efficient person
 </body>
 </html>
