--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>studentsite</title>
 </head>
 <body>
-    Hii!! I am Shivali waghmare
+    Hii!! I am Shivali Waghmare.
     I am studing new skill to make myself a efficient person
 
     I have worked on few CLI apps;
